--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ C3/Object Oriented Programming - Python_edycja_2023.pdf
 C2/.DS_Store
 */.DS_Store
 .DS_Store
+C5/Classes_list2_inheritance_2023.docx
+C5/~$asses_list2_inheritance_2023.docx
