finish class seven

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ C2/.DS_Store
 .DS_Store
 C5/Classes_list2_inheritance_2023.docx
 C5/~$asses_list2_inheritance_2023.docx
+C7/Classes_list3_encapsulation_2023.docx
