--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ C2/.DS_Store
 C5/Classes_list2_inheritance_2023.docx
 C5/~$asses_list2_inheritance_2023.docx
 C7/Classes_list3_encapsulation_2023.docx
+!/C9/Classes_list4_unittesting_OOP_2023.docx
+!/C9/~$asses_list4_unittesting_OOP_2023.docx
